--- a/src/presentation/Customer.API/Customer.API.csproj
+++ b/src/presentation/Customer.API/Customer.API.csproj
@@ -5,4 +5,9 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../../BuildingBlocks/BuildingBlocks.ServiceDefaults/BuildingBlocks.ServiceDefaults.csproj" />
+    <ProjectReference Include="../../core/Customer.Application/Customer.Application.csproj" />
+  </ItemGroup>
 </Project>
