--- a/src/core/Customer.Domain/CustomerFlow.Core.Domain.csproj
+++ b/src/core/Customer.Domain/CustomerFlow.Core.Domain.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../BuildingBlocks/BuildingBlocks.ServiceDefaults/BuildingBlocks.ServiceDefaults.csproj" />
-    <ProjectReference Include="../Customer.Domain/Customer.Domain.csproj" />
+    <ProjectReference Include="../../BuildingBlocks/BuildingBlocks.Core/CustomerFlow.BuildingBlocks.Core.csproj" />
   </ItemGroup>
 
 </Project>
