feat: Add repository pattern implementation and customer domain models

--- a/src/core/Customer.Application/CustomerFlow.Core.Application.csproj
+++ b/src/core/Customer.Application/CustomerFlow.Core.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="../Customer.Domain/CustomerFlow.Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features/Customer/Queries/" />
+  </ItemGroup>
+
 </Project>
