--- a/src/infra/CustomerFlow.Repository.WriteModel/CustomerFlow.Infra.WriteModel.csproj
+++ b/src/infra/CustomerFlow.Repository.WriteModel/CustomerFlow.Infra.WriteModel.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../../buildingBlocks/BuildingBlocks.Core/CustomerFlow.BuildingBlocks.Core.csproj" />
+    <ProjectReference Include="../../core/Customer.Domain/CustomerFlow.Core.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
+  </ItemGroup>
+
 </Project>
