--- a/src/buildingBlocks/BuildingBlocks.Core/CustomerFlow.BuildingBlocks.Core.csproj
+++ b/src/buildingBlocks/BuildingBlocks.Core/CustomerFlow.BuildingBlocks.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit.Abstractions" />
+    <PackageReference Include="Mediator.Abstractions" />
   </ItemGroup>
 
 </Project>
