Refactor CustomerFlow solution structure and update domain models
- Renamed "CustomerFlow.Infra.ReadModel" to "CustomerFlow.Infra.QueryRepository" and "CustomerFlow.Infra.WriteModel" to "CustomerFlow.Infra.CommandRepository" in the solution file.
- Added constructors to Aggregate and Entity classes for better initialization.
- Updated IDomainEvent interface to inherit from INotification.
- Introduced Create and Update methods in the Entity class for better entity management.
- Refactored ValueObject class to use a constructor for value assignment.
- Enhanced NotFoundException message format for clarity.
- Updated Customer.Application project references and folder structure.
- Removed obsolete CreateCustomer command and handler classes.
- Added new command and handler classes for customer creation and email verification.
- Implemented domain events for customer activation and password updates.
- Created new value objects for Email, Password, PhoneNumber, and State with validation logic.
- Established command and query repository interfaces for better separation of concerns.
- Added integration events for customer activation.
- Updated Customer class to include email verification logic and password management.
- Removed unused repository and DTO classes.

--- a/src/core/Customer.Application/CustomerFlow.Core.Application.csproj
+++ b/src/core/Customer.Application/CustomerFlow.Core.Application.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../buildingBlocks/BuildingBlocks.Messaging/CustomerFlow.BuildingBlocks.Messaging.csproj" />
     <ProjectReference Include="../../buildingBlocks/BuildingBlocks.ServiceDefaults/CustomerFlow.BuildingBlocks.ServiceDefaults.csproj" />
     <ProjectReference Include="../Customer.Domain/CustomerFlow.Core.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features/Customer/Queries/" />
+    <Folder Include="Features/Customers/EventHandlers/Integration/" />
+    <Folder Include="Features/Customers/Queries/" />
   </ItemGroup>
 
 </Project>
