--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -31,5 +31,6 @@
     <PackageVersion Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageVersion Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+    <PackageVersion Include="Refit" Version="8.0.0" />
   </ItemGroup>
 </Project>
