--- a/src/core/Customer.Application/CustomerFlow.Core.Application.csproj
+++ b/src/core/Customer.Application/CustomerFlow.Core.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Dtos/" />
     <Folder Include="Features/Customers/EventHandlers/Integration/" />
     <Folder Include="Features/Customers/Queries/" />
   </ItemGroup>
