--- a/src/presentation/Customer.API/CustomerFlow.Presentation.API.csproj
+++ b/src/presentation/Customer.API/CustomerFlow.Presentation.API.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="../../core/Customer.Application/CustomerFlow.Core.Application.csproj" />
     <ProjectReference Include="../../core/Customer.Domain/CustomerFlow.Core.Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+  </ItemGroup>
 </Project>
