--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,6 +4,10 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="DotNetCore.CAP" Version="8.3.5" />
+    <PackageVersion Include="DotNetCore.CAP.Dashboard" Version="8.3.5" />
+    <PackageVersion Include="DotNetCore.CAP.Kafka" Version="8.3.5" />
+    <PackageVersion Include="DotNetCore.CAP.MySql" Version="8.3.5" />
     <PackageVersion Include="Mapster" Version="7.4.0" />
     <PackageVersion Include="FluentValidation" Version="11.11.0" />
     <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
