feat: Update project dependencies, enhance API endpoints, and configure Docker for CustomerFlow application

--- a/src/infra/CustomerFlow.Infra.CustomerIntegrationAdapter/CustomerFlow.Infra.CustomerIntegrationAdapter.csproj
+++ b/src/infra/CustomerFlow.Infra.CustomerIntegrationAdapter/CustomerFlow.Infra.CustomerIntegrationAdapter.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration/" />
     <Folder Include="Enums/" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Refit" />
+    <PackageReference Include="Refit.HttpClientFactory" />
   </ItemGroup>
 
   <ItemGroup>
