--- a/src/core/Customer.Application/CustomerFlow.Core.Application.csproj
+++ b/src/core/Customer.Application/CustomerFlow.Core.Application.csproj
@@ -18,4 +18,12 @@
     <Folder Include="Features/Customers/Queries/" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mediator.Abstractions" />
+    <PackageReference Include="Mediator.SourceGenerator">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
