--- a/src/presentation/Customer.API/CustomerFlow.Presentation.API.csproj
+++ b/src/presentation/Customer.API/CustomerFlow.Presentation.API.csproj
@@ -10,9 +10,21 @@
     <ProjectReference Include="../../buildingBlocks/BuildingBlocks.ServiceDefaults/CustomerFlow.BuildingBlocks.ServiceDefaults.csproj" />
     <ProjectReference Include="../../core/Customer.Application/CustomerFlow.Core.Application.csproj" />
     <ProjectReference Include="../../core/Customer.Domain/CustomerFlow.Core.Domain.csproj" />
+    <ProjectReference Include="../../infra/CustomerFlow.Infra.CustomerIntegrationAdapter/CustomerFlow.Infra.CustomerIntegrationAdapter.csproj" />
+    <ProjectReference Include="../../infra/CustomerFlow.Repository.WriteModel/CustomerFlow.Infra.CommandRepository.csproj" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <OpenApiGenerateDocuments>true</OpenApiGenerateDocuments>
+    <OpenApiDocumentsDirectory>$(MSBuildProjectDirectory)</OpenApiDocumentsDirectory>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
   </ItemGroup>
 </Project>
