--- a/src/presentation/Customer.API/appsettings.json
+++ b/src/presentation/Customer.API/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "MessageBroker": {
+    "Host": "kafka:9092"
+  },
+  "ConnectionStrings": {
+    "customerDb": "Server=localhost;Port=3307;Database=customerflow;Uid=root;Pwd=example;Allow User Variables=true"
+  }
 }
