feat: Add initial migration and update DbContext for Customer and PayFrequency models; include EF Core design tools

--- a/src/presentation/Customer.API/CustomerFlow.Presentation.API.csproj
+++ b/src/presentation/Customer.API/CustomerFlow.Presentation.API.csproj
@@ -26,5 +26,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
   </ItemGroup>
 </Project>
