--- a/src/presentation/Customer.API/appsettings.Development.json
+++ b/src/presentation/Customer.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "MessageBroker": {
-    "Host": "kafka:9092"
+    "Host": "localhost:9092"
   },
   "ConnectionStrings": {
     "customerDb": "Server=localhost;Port=3307;Database=customerflow;Uid=root;Pwd=example;Allow User Variables=true"
