feat: Update project references, add VerifyEmail endpoint, and refactor endpoint mapping

--- a/src/buildingBlocks/BuildingBlocks.Messaging/CustomerFlow.BuildingBlocks.Messaging.csproj
+++ b/src/buildingBlocks/BuildingBlocks.Messaging/CustomerFlow.BuildingBlocks.Messaging.csproj
@@ -14,7 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../infra/CustomerFlow.Repository.WriteModel/CustomerFlow.Infra.CommandRepository.csproj" />
+    <ProjectReference Include="../../core/Customer.Domain/CustomerFlow.Core.Domain.csproj" />
   </ItemGroup>
-
 </Project>
