Refactor domain model to use IEntityId for aggregates and entities
- Updated Aggregate and Entity classes to enforce IEntityId constraint on ID types.
- Introduced IDomainEvent interface with aggregate reference.
- Modified Customer and PayFrequency classes to use specific ID value objects.
- Refactored command and query repositories to accept IEntityId instead of Id.
- Adjusted domain events to reference aggregates directly.
- Updated API endpoints to reflect changes in command and query structures.
- Removed obsolete Id value object and replaced with CustomerId and PayFrequencyId.
- Added initial migration for database schema changes.

--- a/src/core/Customer.Domain/CustomerFlow.Core.Domain.csproj
+++ b/src/core/Customer.Domain/CustomerFlow.Core.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="AggregatesModel/CustomerAggregate/ValueObjects/.config/dotnet-tools.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="../../buildingBlocks/BuildingBlocks.Core/CustomerFlow.BuildingBlocks.Core.csproj" />
   </ItemGroup>
 
