--- a/src/presentation/Customer.API/appsettings.Development.json
+++ b/src/presentation/Customer.API/appsettings.Development.json
@@ -10,6 +10,7 @@
     "Host": "localhost:9092"
   },
   "ConnectionStrings": {
-    "customerDb": "Server=localhost;Port=3307;Database=customerflow;Uid=root;Pwd=example;Allow User Variables=true"
+    "customerDbEf": "Server=localhost;Port=3307;Database=customerflow;Uid=root;Pwd=example;Allow User Variables=true",
+    "customerDbDp": "Server=127.0.0.1;Port=3307;Database=customerflow;Uid=root;Pwd=example;Allow User Variables=true"
   }
 }
