--- a/src/presentation/Customer.API/CustomerFlow.Presentation.API.csproj
+++ b/src/presentation/Customer.API/CustomerFlow.Presentation.API.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="../../core/Customer.Application/CustomerFlow.Core.Application.csproj" />
     <ProjectReference Include="../../core/Customer.Domain/CustomerFlow.Core.Domain.csproj" />
     <ProjectReference Include="../../infra/CustomerFlow.Infra.CustomerIntegrationAdapter/CustomerFlow.Infra.CustomerIntegrationAdapter.csproj" />
+    <ProjectReference Include="../../infra/CustomerFlow.Repository.ReadModel/CustomerFlow.Infra.QueryRepository.csproj" />
     <ProjectReference Include="../../infra/CustomerFlow.Repository.WriteModel/CustomerFlow.Infra.CommandRepository.csproj" />
   </ItemGroup>
 
